--- a/Baltimore 911 Calls.ipynb
+++ b/Baltimore 911 Calls.ipynb
@@ -4,22 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Baltimore City Police Emergency and Non-Emergency 911 Calls for Service, 2015-2018"
+    "## Baltimore City Police Emergency and Non-Emergency 911 Calls for Service, 2015-2018"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will analyze Baltimore's 911 police calls for service data, which can be obtained from [Open Baltimore](https://data.baltimorecity.gov/Public-Safety/911-Police-Calls-for-Service/xviu-ezkt). The calls dates range from January 1st, 2015 to present. There are 3.6 million rows as of July 1st, 2018, each row representing an individual call. Data is automatically refreshed multiple times a day.\n",
+    "### Summary\n",
+    "This notebook will analyze Baltimore's 911 police calls for service data to observe trends, and predict 911 calls using spatial analysis.\n",
+    "\n",
+    "### Introduction\n",
     "\n",
     "Baltimore, MD is known for its violent crime rate, including annual robbery and homicide rates that rank above the national average. Although overall reported crime has dropped significantly since the early 1990s, homicide rates remain high and especially concentrated in poverty areas. Despite the population of Baltimore metropolitan area having shrunk over decades, its per-capita homicide record remain one of the highest in the country.\n",
     "\n",
     "Violent crime spiked in 2015 after the death of Freddie Gray on April 19, leading to a sudden spike in civil unrest and rioting from late April to early May. Crime rates in Baltimore reached one of the highest peaks that year; 2015's tally of 344 homicides, nearly 90 percent of which were the result of shooting, was the most since 1993.\n",
     "\n",
+    "### Data and Methods\n",
+    "\n",
+    "Baltimore 911 call data was be obtained from [Open Baltimore](https://data.baltimorecity.gov/Public-Safety/911-Police-Calls-for-Service/xviu-ezkt). The calls dates range from January 1st, 2015 to present. There are 3.6 million rows as of July 1st, 2018, each row representing an individual call. Data is automatically refreshed multiple times a day.\n",
     "\n",
     "The data contains the following fields:\n",
-    "\n",
     "\n",
     "* recordId: Int variable, record identifier\n",
     "* callDateTime: Floating timestamp, YYYY-MM-DD HH:MM:SS\n",
@@ -28,7 +33,15 @@
     "* description: String variable, description of the emergency call\n",
     "* callNumber: String variable, call identifier\n",
     "* incidentLocation: String variable, location of incident \t\n",
-    "* location: String variable, location of call"
+    "* location: String variable, location of call\n",
+    "\n",
+    "### Limitationa\n",
+    "\n",
+    "**Reporting**: The 911 calls do not account for all crimes tha occured in Baltimore, since some are not reported. However, it is a big dataset and we are able to observe several trends over time.\n",
+    "\n",
+    "**Categorization**: Calls that had descriptions 'no voice' or 'other' accounted for almost 30% of all calls. Some categories may overlap, such as 'common assault' and 'investigate' calls.\n",
+    "\n",
+    "**Priority**: The standard for which calls are low or high priority were unclear, with a single category of calls having different levels of priority."
    ]
   },
   {
@@ -917,6 +930,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The number of calls follow a seasonal pattern - higher in the summer (June-August), and lower in the winter (December-February). This is helpful when focusing on monthly year-to-year changes to isolate trends over time. By comparing the number of calls in each month of the year to the calls in the same month in the prior year, we can see changes in trends with seasonal effects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There is a spike in 911 calls around April/May of 2015. If we zoom into this part of the graph by limiting the x-axis to just 2015 calls, we see that this happens on April 27th, 2015. This was the date of Freddie Gray's funeral, which was followed by a sharp increase in civil disorder in Baltimore.\n",
     "\n",
     "Baltimore in May 2015 saw 43 cases of reported homicide, making it the city's deadliest month in more than 40 years. The number of homicides fell the following month, but in July 2015 45 murders were recorded, tying with the record in 1972. For reference, Baltimore's population in the 1970's were approximately 45% higher than in 2015."
@@ -1713,7 +1733,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "calls_feat = pd.read_pickle('C:/Users/sonye/PythonPrograms/baltimore_911_calls_feat')"
